# MedAgent

./: .env  .env.example  .flake8  .gitignore  AUDIT_AND_IMPROVEMENTS.md  FINAL_PROJECT_MANIFEST.md  FINAL_REPORT.md  LAUNCH_CHECKLIST.md  MOCK_DEMO.py  Multi-agent Smart Hospital System – Graduation Project_Plan.docx  PRE_LAUNCH_REPORT.md  PRE_LAUNCH_TEST_REPORT.md  PRODUCTION_READINESS_REPORT.md  README.md  README_RUN.md  START_MEDAGENT.bat  audit_import_results.txt  config.ini  config.py  debug_import.py  import_audit.txt  import_trace.txt  master_audit_results.txt  med_agent_readme.md  medagent.db  mini_app.py  py_compile_error.txt  py_compile_error_utf8.txt  py_compile_error_v2.txt  py_compile_error_v2_utf8.txt  pytest_cto_final_v2.txt  pytest_cto_final_v5.txt  pytest_cto_final_v7.txt  pytest_cto_final_v7_utf8.txt  pytest_final.txt  pytest_final_utf8.txt  pytest_final_v2.txt  pytest_final_v3.txt  pytest_output.txt  pytest_utf8.txt  (+21 more)
MedAgent-main/: .coveragerc  .dockerignore  .editorconfig  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  package.json  plan.md  pnpm-lock.yaml  pyproject.toml
MedAgent-main/.github/workflows/: ci.yml  deploy-prod.yml
MedAgent-main/backend/: .env.example  Dockerfile  alembic.ini  pytest.ini
MedAgent-main/backend/alembic/: env.py
MedAgent-main/backend/app/: main.py
MedAgent-main/docs/: DEPI-final-report.md  ai-pipeline.md  api-reference.md  architecture.md  conversation-flow.html  deployment.md  development.md  safety.md
MedAgent-main/docs/tasks/: STATUS.md
MedAgent-main/frontend/: Dockerfile  eslint.config.mjs  middleware.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
MedAgent-main/notebooks/: medagent_finetune_optimized.ipynb
MedAgent-main/scripts/: README.md  audit_verify.py  build_curated_kb.py  build_kb.py  download_kb.py  eval.py  seed_kb.py  test_retrieval.py
(+647 files in other folders)
