[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # --- Phase 1 ---
    "aiosmtplib>=3.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "bcrypt>=4.0.0",
    "email-validator>=2.1.0",
    "fastapi>=0.136.1",
    "pgvector>=0.3.0",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.3.0",
    "slowapi>=0.1.9",
    "sqlalchemy[asyncio]>=2.0.0",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.46.0",
    # --- Phase 2 ---
    "sentence-transformers>=3.0.0",
    "tiktoken>=0.7.0",
    "spacy>=3.7.0",
    "redis>=5.0.0",
    "FlagEmbedding>=1.3.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    # --- Phase 2.5 & 3 ---
    "cryptography>=42.0.0",
    "Pillow>=10.0.0",
    "weasyprint>=62.0",
    "jinja2>=3.1.0",
    # --- Phase 4: Observability ---
    "prometheus-client>=0.20.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "pytest-cov>=5.0.0",
]




[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    ".venv",
    "alembic/versions",
    "notebooks",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = [
    "E501",
    "B008",
    "RUF001",  # Arabic characters are not ambiguous — this is an Arabic-first project
    "RUF002",  # Arabic in docstrings is expected
    "RUF003",  # Arabic in comments is expected
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[dependency-groups]
dev = [
    "mypy>=2.0.0",
    "ruff>=0.15.12",
]



